<resources>
    <string name="app_name">Unbrickable</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="theme">Theme</string>
	<string name="subtheme">Subtheme</string>
	<string name="year">Year</string>
	<string name="parts">Parts</string>
	<string name="visit_website">Visit website</string>
	<string name="set_number">Set number</string>
	<string name="set_list">Set list</string>
	<string name="cancel">Cancel</string>
	<string name="add">Add</string>
	<string name="setlists">Set lists</string>
	<string name="sets_in_setlist_title_format">Sets in %s</string>
	<string name="details">Details</string>
	<string name="logout">Logout</string>
</resources>
