<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/inputLayoutAddSetDialog"
		android:layout_width="0dp"
		android:layout_height="54dp"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:hint="@string/set_number"
		app:layout_constraintBottom_toTopOf="@+id/addSetCancel"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:layout_constraintVertical_chainStyle="packed">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/addSetNumber"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:inputType="textPersonName"
			app:layout_constraintBottom_toTopOf="@+id/addSetSetList"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed"
			tools:text="7654" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/addSet"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:text="@string/add"
		app:layout_constraintBottom_toBottomOf="@+id/addSetCancel"
		app:layout_constraintEnd_toEndOf="@+id/inputLayoutAddSetDialog"
		app:layout_constraintStart_toEndOf="@+id/addSetCancel"
		app:layout_constraintTop_toTopOf="@+id/addSetCancel" />

	<Button
		android:id="@+id/addSetCancel"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/cancel"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/addSet"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/inputLayoutAddSetDialog" />


</android.support.constraint.ConstraintLayout>