<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:layout_editor_absoluteY="25dp">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/loginUserNameLayout"
		android:layout_width="@dimen/login_view_width"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:hint="@string/username"
		app:layout_constraintBottom_toTopOf="@+id/loginPasswordLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/loginUserName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:inputType="text"
			tools:text="TestUserName13"
			android:lines="1" />

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/loginPasswordLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/password"
		app:layout_constraintBottom_toTopOf="@+id/loginButton"
		app:layout_constraintEnd_toEndOf="@+id/loginUserNameLayout"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="@+id/loginUserNameLayout"
		app:layout_constraintTop_toBottomOf="@+id/loginUserNameLayout">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/loginPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:inputType="textPassword"
			tools:text="TestPassword12345"
			android:lines="1" />
	</android.support.design.widget.TextInputLayout>


	<Button
		android:id="@+id/loginButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/loginUserNameLayout"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="@+id/loginUserNameLayout"
		app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />
</android.support.constraint.ConstraintLayout>